src/objects/loan__Multi_Step_Loan_Setup__c.object
<CustomObject>
    <description>This contains the date when the interest rate will change for the loan account</description>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipName>Multi_Step_Loan_Setup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Change_Date_Next__c</fullName>
        <defaultValue>DATE(3100, 12, 31)</defaultValue>
        <description>Next Rate change date, used for processing only, please do not display it on UI</description>
        <label>Next Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Rate Schedule Setup</label>
    <nameField>
        <displayFormat>MSLSID-{0000000000}</displayFormat>
        <label>Rate Schedule Setup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Schedule Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>